add readme file

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 ## Copyright: https://github.com/github/gitignore/blob/master/Python.gitignore
 
+access.config
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
